--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,22 +1,10 @@
 {
-    "files.insertFinalNewline": true,
-    "editor.formatOnSave": true,
-    "liveSassCompile.settings.showOutputWindow": false,
-    "liveSassCompile.settings.autoprefix": [
-        "> 0.2%",
-        "last 2 versions"
-    ],
-    "liveSassCompile.settings.formats": [{
-        "format": "expanded",
-        "extensionName": ".css",
-        "savePath": "~/.."
-    }],
-    "liveSassCompile.settings.generateMap": false,
-    "css.validate": false,
-    "less.validate": false,
-    "scss.validate": false,
-    "stylelint.enable": true,
-    "stylelint.configOverrides": {
-        "extends": "./.stylelintrc"
-    },
+  "editor.formatOnSave": true,
+  "beautify.ignore": ["*.css"],
+  "files.insertFinalNewline": true,
+  "javascript.validate.enable": false,
+  "standard.enable": true,
+  "standard.autoFixOnSave": true,
+  "scss.validate": true,
+  "sasslint.enable": true
 }
